--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  height: 2000px;
 }
 
 h1,
@@ -103,6 +104,7 @@ img {
 .introducao-bg {
   background: #000;
   color: #fff;
+  box-shadow: inset 0 -120px #fff;
 }
 
 .introducao {
@@ -117,7 +119,13 @@ img {
 
 .introducao-conteudo {
   align-self: end;
-  padding-bottom: 80px;
+  padding-bottom: 200px;
+}
+
+.introducao img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
 
 .introducao h1 {
