--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -7,10 +7,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding: 0px 20px;
-  margin: 0 auto;
 }
 
 .introducao-conteudo {
@@ -19,6 +15,7 @@
 }
 
 .introducao img {
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
