--- a/css/style.css
+++ b/css/style.css
@@ -18,5 +18,7 @@
 @import "./bicicletas/bicicletas-listas.css";
 
 /* Seguros */
-
 @import "./seguros/seguros.css";
+
+/* Termos */
+@import "./termos/termos.css";
