--- a/css/bicicletas/bicicletas-listas.css
+++ b/css/bicicletas/bicicletas-listas.css
@@ -12,11 +12,13 @@
   gap: 40px;
   padding: 0 20px 20px 20px;
   max-width: 1400px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   overflow-x: auto;
 }
 
 .bicicletas-lista li {
+  flex: 1;
   min-width: 280px;
 }
 
@@ -56,7 +58,6 @@
   .bicicletas-lista {
     padding-bottom: 60px;
   }
-
   .bicicletas-lista ul {
     gap: 20px;
   }
