--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -28,6 +28,25 @@
   background: var(--cor-9);
 }
 
+.botao.seta {
+  display: flex;
+  align-items: center;
+}
+
+.botao.seta::after {
+  content: " ";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url("../../img/icones/seta.svg");
+  transition: transform 0.2s;
+}
+
+.botao.seta:hover::after {
+  transform: translateX(4px);
+}
+
 .botao:hover {
   background: linear-gradient(#ffb60d, #e59317);
 }
