javascript adicionado em perguntas frequentes

--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -16,7 +16,7 @@
   background-color: var(--cor-1);
 }
 
-.perguntas dt::before {
+.perguntas button::before {
   content: "";
   display: inline-block;
   width: 12px;
@@ -24,15 +24,19 @@
   background-color: var(--cor-p1);
 }
 
-.perguntas dt {
+.perguntas button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
 
-.perguntas dt::after {
+.perguntas button::after {
   content: "";
   display: inline-block;
   width: 14px;
@@ -41,12 +45,21 @@
   transition: 0.3s;
 }
 
-.perguntas dt:hover::after {
+.perguntas button:hover::after,
+.perguntas button[aria-expanded="true"]::after {
   transform: rotate(180deg);
 }
 
 .perguntas dd {
-  padding-left: 20px;
+  display: none;
+}
+
+.perguntas dd.ativa {
+  display: block;
+}
+
+.perguntas dd {
+  padding-left: 25px;
   padding-top: 16px;
   max-width: 80ch;
 }
